--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "@capacitor/status-bar": "6.0.1",
     "@ionic/angular": "^8.0.0",
     "@ionic/storage-angular": "^4.0.0",
+    "@types/mapbox-gl": "^3.4.1",
     "ionicons": "^7.0.0",
+    "mapbox-gl": "^3.8.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
